--- a/style.css
+++ b/style.css
@@ -46,18 +46,29 @@ button {
 
 /* Products Page */
 #products {
-    display: none;
-    flex-wrap: wrap;
-    text-align: center;
-    padding: 50px 200px;
+    display: none; 
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    padding: 40px 20px;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .productUL {
     text-transform: uppercase;  
     text-align: center;  
-    flex-basis: 27%;
-    margin: auto;
-    margin-bottom: 60px;
+    width: 100%;
+    margin: 0;
+    margin-bottom: 40px;
+    list-style-type: none;
+    padding: 0;
+}
+
+.product-image {
+    width: 100%;
+    height: 250px;
+    object-fit: contain;
+    margin-bottom: 15px;
 }
 
 .productUL li {
@@ -107,10 +118,6 @@ button {
     font-weight: bold;
     margin-bottom: 1rem;
     color:#383838;
-}
-.product-image{
-    max-width: 40rem;
-    max-height: auto;
 }
 
 /* navigation bar */
